--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <google-cloud.version>0.3.0</google-cloud.version>
+        <google.cloud.version>0.3.0</google.cloud.version>
         <slf4j.version>1.7.21</slf4j.version>
         <guava.version>19.0</guava.version>
     </properties>
@@ -31,7 +31,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>google-cloud-storage</artifactId>
-                <version>${google-cloud.version}</version>
+                <version>${google.cloud.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
