Adding delete method to helper

--- a/gcp-storage/pom.xml
+++ b/gcp-storage/pom.xml
@@ -3,12 +3,16 @@
 Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <parent>
-       <groupId>org.rutebanken.helpers</groupId>
-       <artifactId>helper</artifactId>
-       <version>0.0.1-SNAPSHOT</version>
-       <relativePath>..</relativePath>
-   </parent>
+    <parent>
+        <groupId>org.rutebanken.helpers</groupId>
+        <artifactId>helper</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
+
+    <properties>
+        <!--<junit.platform.version>1.0.0-M2</junit.platform.version>-->
+    </properties>
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,8 +21,8 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <name>gcp-storage</name>
 
     <dependencies>
-      <!--- NOTICE that you put the versions in the parent dependency
-      management section, and artifacts without version here. -->
+        <!--- NOTICE that you put the versions in the parent dependency
+        management section, and artifacts without version here. -->
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
@@ -31,8 +35,24 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+       <!-- <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency> -->
     </dependencies>
 
     <build>
+       <!-- <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+        </plugins>-->
     </build>
+
 </project>
