--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <parent>
-       <groupId>org.rutebanken.superpom</groupId>
-       <artifactId>superpom</artifactId>
-       <version>0.0.2</version>
-   </parent>
+    <parent>
+        <groupId>org.rutebanken.superpom</groupId>
+        <artifactId>superpom</artifactId>
+        <version>0.0.2</version>
+    </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -17,22 +17,26 @@
 
     <!-- Not sure why I need to have this here, when it is present in parent pom -->
     <distributionManagement>
-      <snapshotRepository>
-          <id>Nexus</id>
-          <url>https://nexus.rutebanken.org/content/repositories/snapshots</url>
-      </snapshotRepository>
+        <snapshotRepository>
+            <id>Nexus</id>
+            <url>https://nexus.rutebanken.org/content/repositories/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
     <!-- /Not sure why... -->
 
     <scm>
-      <connection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</connection>
-      <developerConnection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</developerConnection>
-  </scm>
+        <connection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</connection>
+        <developerConnection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</developerConnection>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <google.cloud.version>0.3.0</google.cloud.version>
         <slf4j.version>1.7.21</slf4j.version>
         <guava.version>19.0</guava.version>
+        <junit.version>4.12</junit.version>
+        <junit.jupiter.version>5.0.0-M2</junit.jupiter.version>
+        <junit.vintage.version>${junit.version}.0-M2</junit.vintage.version>
+        <junit.platform.version>1.0.0-M2</junit.platform.version>
     </properties>
 
     <dependencyManagement>
@@ -52,10 +56,58 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+        <!--    <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency> -->
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+              <!--  <configuration>
+                    <includes>
+                        <include>**/Test*.java</include>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/*TestCase.java</include>
+                    </includes>
+                </configuration>-->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit.platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.jupiter.version}</version>
+                    </dependency>
+                 <!--   <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>${junit.vintage.version}</version>
+                    </dependency> -->
+                </dependencies>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <modules>
-      <module>gcp-storage</module>
+        <module>gcp-storage</module>
     </modules>
 </project>
