--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <distributionManagement>
         <snapshotRepository>
             <id>Nexus</id>
-            <url>https://nexus.rutebanken.org/content/repositories/snapshots</url>
+            <url>https://test.rutebanken.org/admin/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
     <!-- /Not sure why... -->
