--- a/gcp-storage/pom.xml
+++ b/gcp-storage/pom.xml
@@ -21,7 +21,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <name>gcp-storage</name>
 
     <dependencies>
-        <!--- NOTICE that you put the versions in the parent dependency
+        <!-- NOTICE that you put the versions in the parent dependency
         management section, and artifacts without version here. -->
         <dependency>
             <groupId>com.google.cloud</groupId>
