--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,14 @@
 
     <groupId>org.rutebanken.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <name>helper</name>
 
     <scm>
         <connection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</connection>
         <developerConnection>scm:git:ssh://git@github.org/rutebanken/rutebanken-helpers.git</developerConnection>
-      <tag>helper-0.0.1</tag>
-  </scm>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <google.cloud.version>0.4.0</google.cloud.version>
