--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <google.cloud.version>0.4.0</google.cloud.version>
+        <google.cloud.storage.version>0.4.0</google.cloud.storage.version>
+        <google.cloud.trace.version>0.1.0</google.cloud.trace.version>
         <slf4j.version>1.7.21</slf4j.version>
         <guava.version>19.0</guava.version>
         <junit.version>4.12</junit.version>
@@ -36,7 +37,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>google-cloud-storage</artifactId>
-                <version>${google.cloud.version}</version>
+                <version>${google.cloud.storage.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -67,6 +68,11 @@
             <dependency>
                 <groupId>com.google.cloud.trace</groupId>
                 <artifactId>v1</artifactId>
+                <version>0.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud.trace</groupId>
+                <artifactId>grpc-sink</artifactId>
                 <version>0.1.0</version>
             </dependency>
               <!--    <dependency>
