NRP-9 Added spring annotations for postconstruct / predestroy

--- a/hazelcast-helper/pom.xml
+++ b/hazelcast-helper/pom.xml
@@ -48,6 +48,11 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
