--- a/hazelcast-helper/pom.xml
+++ b/hazelcast-helper/pom.xml
@@ -6,7 +6,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <parent>
         <groupId>org.rutebanken.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>..</relativePath>
     </parent>
 
