--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
 
     <groupId>org.rutebanken.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <name>helper</name>
 
     <scm>
         <connection>scm:git:ssh://git@github.com/rutebanken/rutebanken-helpers.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/rutebanken/rutebanken-helpers.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>helper-0.0.2</tag>
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
