--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,16 @@
         <junit.jupiter.version>5.0.0-M2</junit.jupiter.version>
         <junit.vintage.version>${junit.version}.0-M2</junit.vintage.version>
         <junit.platform.version>1.0.0-M2</junit.platform.version>
+        <jackson.version>2.8.7</jackson.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>google-cloud-storage</artifactId>
@@ -146,5 +152,6 @@
         <module>gcp-storage</module>
         <module>hazelcast-helper</module>
         <module>calendar-helper</module>
+        <module>organisation</module>
     </modules>
 </project>
