--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <junit.vintage.version>${junit.version}.0-M2</junit.vintage.version>
         <junit.platform.version>1.0.0-M2</junit.platform.version>
         <jackson.version>2.8.7</jackson.version>
+        <keycloak.version>3.0.0.Final</keycloak.version>
     </properties>
 
     <dependencyManagement>
@@ -101,6 +102,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>4.3.5.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-spring-security-adapter</artifactId>
+                <version>${keycloak.version}</version>
             </dependency>
 
             <dependency>
