removed test code from project

--- a/organisation/pom.xml
+++ b/organisation/pom.xml
@@ -40,20 +40,11 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <!-- <plugins>
+             <plugin>
+                 <artifactId>maven-surefire-plugin</artifactId>
+             </plugin>
+         </plugins>-->
     </build>
 
 </project>
