NRP-1704 Extracted batch jms listener container from marduk to helper project to allow usage in Irkalla.

--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,6 @@
         <module>hazelcast-helper</module>
         <module>calendar-helper</module>
         <module>organisation</module>
+        <module>jms-batch</module>
     </modules>
 </project>
