NRP-1833 toString for roleAssignment

--- a/organisation/pom.xml
+++ b/organisation/pom.xml
@@ -33,6 +33,10 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <artifactId>keycloak-spring-security-adapter</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
