NRP-1833 Add logback, but only for test scope.

--- a/organisation/pom.xml
+++ b/organisation/pom.xml
@@ -41,6 +41,13 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
