--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,13 @@
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <google.cloud.storage.version>1.4.0</google.cloud.storage.version>
+        <!-- Marduk is using gcp-storage as dependency, and builds OTP graphs.
+             OTP does not support guava versions higher than 18.0.
+             The guava version seems to affect serialisation of OTP graph. Somehow, it leaks into the graph built and breaks when OTP tries to read it.
+             It should be equal to or lower than the version used by OTP
+             Be careful when updating the google cloud storage core version, as the version 1.4.0 requires guava > 20
+        -->
+        <google.cloud.storage.version>1.2.0</google.cloud.storage.version>
         <google.cloud.trace.version>0.1.0</google.cloud.trace.version>
         <slf4j.version>1.7.22</slf4j.version>
         <guava.version>21.0</guava.version>
