--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>org.rutebanken.helpers</groupId>
+    <groupId>org.entur.helpers</groupId>
     <artifactId>helper</artifactId>
     <version>0.0.3-SNAPSHOT</version>
 
