--- a/jms-batch/pom.xml
+++ b/jms-batch/pom.xml
@@ -12,6 +12,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     </parent>
 
     <properties>
+        <license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
         <activemq.version>5.13.4</activemq.version>
     </properties>
 
