--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
 
 
     <properties>
+        <license.licenseName>eupl-1.2</license.licenseName>
+        <license.licenseResolver>${project.baseUri}/src/license</license.licenseResolver>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Marduk is using gcp-storage as dependency, and builds OTP graphs.
              OTP does not support guava versions higher than 18.0.
@@ -167,6 +169,11 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>1.14</version>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.5.1</version>
@@ -219,6 +226,20 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.14</version>
+                <executions>
+                    <execution>
+                        <id>first</id>
+                        <goals>
+                            <goal>update-file-header</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
