NRP-1952 Added license file

--- a/src/license/licenses.properties
+++ b/src/license/licenses.properties
@@ -1,8 +1,8 @@
-###
+
 # #%L
 # rutebanken-helper
 # %%
-# Copyright (C) 2016 - 2017 Entur
+# Copyright (C) 2016 - 2017 Entur AS
 # %%
 # Licensed under the EUPL, Version 1.2 or – as soon they will be approved by
 # the European Commission - subsequent versions of the EUPL (the "Licence");
