--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <maven>3.2.3</maven>
     </prerequisites>
     <organization>
-        <name>Entur</name>
+        <name>Entur AS</name>
         <url>http://www.entur.org/</url>
     </organization>
 
