--- a/jms-batch/pom.xml
+++ b/jms-batch/pom.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Licensed under the EUPL, Version 1.2 or – as soon they will be approved by
+  ~ the European Commission - subsequent versions of the EUPL (the "Licence");
+  ~ You may not use this work except in compliance with the Licence.
+  ~ You may obtain a copy of the Licence at:
+  ~
+  ~   https://joinup.ec.europa.eu/software/page/eupl
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the Licence is distributed on an "AS IS" basis,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the Licence for the specific language governing permissions and
+  ~ limitations under the Licence.
+  ~
+  -->
+
+<!--
 Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.rutebanken.helpers</groupId>
+        <groupId>org.entur.helpers</groupId>
         <artifactId>helper</artifactId>
         <version>0.0.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
     <properties>
+        <license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
         <activemq.version>5.13.4</activemq.version>
     </properties>
 
@@ -41,11 +58,6 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     </dependencies>
 
     <build>
-        <!-- <plugins>
-             <plugin>
-                 <artifactId>maven-surefire-plugin</artifactId>
-             </plugin>
-         </plugins>-->
     </build>
 
 </project>
