--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.3</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <useReleaseProfile>false</useReleaseProfile>
+                        <releaseProfiles>release,sign,!noPublicDeploy</releaseProfiles>
+                        <goals>deploy</goals>
+                    </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.scm</groupId>
@@ -253,6 +259,20 @@
             <properties>
                 <javadoc.opts>-Xdoclint:none</javadoc.opts>
             </properties>
+        </profile>
+        <profile>
+            <id>noPublicDeploy</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <distributionManagement>
+                <repository>
+                    <id>rutebanken-repository</id>
+                    <name>Rutebanken Repository</name>
+                    <!--url>scpexe://localhost:2223/usr/share/nginx/html</url-->
+                    <url>file:///tmp/distro/helper</url>
+                </repository>
+            </distributionManagement>
         </profile>
         <profile>
             <id>sign</id>
