NRP-1952 Updated comment

--- a/pom.xml
+++ b/pom.xml
@@ -284,9 +284,9 @@
             mvn -Psign verify -Dgpg.passphrase=$GPG_PASSPHRASE
             mvn -Psign,noPublicDeploy -Dgpg.passphrase=$GPG_PASSPHRASE clean deploy
             # Release prepare.
-            mvn -Dgpg.passphrase=PASSPHRASE -Darguments=-Dgpg.passphrase=$GPG_PASSPHRASE release:clean release:prepare
+            mvn -Dgpg.passphrase=$GPG_PASSPHRASE -Darguments=-Dgpg.passphrase=$GPG_PASSPHRASE release:clean release:prepare
             # Perform
-            mvn -Dgpg.passphrase=PASSPHRASE -Darguments=-Dgpg.passphrase=$GPG_PASSPHRASE release:perform
+            mvn -Dgpg.passphrase=$GPG_PASSPHRASE -Darguments=-Dgpg.passphrase=$GPG_PASSPHRASE release:perform
             -->
             <build>
                 <plugins>
