NRP-1952 Moved depmngt section from module to super-pom

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-camel</artifactId>
+                <version>${activemq.version}</version>
+            </dependency>
+
+            <dependency>
               <groupId>junit</groupId>
               <artifactId>junit</artifactId>
               <version>${junit.version}</version>
