--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,6 @@
         </license>
     </licenses>
 
-
-    <developers>
-        <developer>
-            <name>Erlend Nossum</name>
-            <email>erlend.nossum@entur.org</email>
-            <organization>Entur</organization>
-            <organizationUrl>http://www.entur.org</organizationUrl>
-        </developer>
-    </developers>
-
     <scm>
         <connection>scm:git:ssh://git@github.com/entur/rutebanken-helpers.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/entur/rutebanken-helpers.git</developerConnection>
@@ -183,6 +173,13 @@
                 <version>1.2.3</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version></version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
